compiscript/program/CompiscriptParser.py
# Generated from Compiscript.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CompiscriptParser ( Parser ):

    grammarFileName = "Compiscript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'let'", "'var'", "';'", 
                     "'const'", "':'", "'='", "'.'", "'print'", "'('", "')'", 
                     "'if'", "'else'", "'while'", "'do'", "'for'", "'foreach'", 
                     "'in'", "'break'", "'continue'", "'return'", "'try'", 
                     "'catch'", "'switch'", "'case'", "'default'", "'function'", 
                     "','", "'class'", "'?'", "'||'", "'&&'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'null'", "'true'", "'false'", 
                     "'new'", "'this'", "'['", "']'", "'boolean'", "'integer'", 
                     "'string'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Literal", "IntegerLiteral", "StringLiteral", "Identifier", 
                      "WS", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_variableDeclaration = 3
    RULE_constantDeclaration = 4
    RULE_typeAnnotation = 5
    RULE_initializer = 6
    RULE_assignment = 7
    RULE_expressionStatement = 8
    RULE_printStatement = 9
    RULE_ifStatement = 10
    RULE_whileStatement = 11
    RULE_doWhileStatement = 12
    RULE_forStatement = 13
    RULE_foreachStatement = 14
    RULE_breakStatement = 15
    RULE_continueStatement = 16
    RULE_returnStatement = 17
    RULE_tryCatchStatement = 18
    RULE_switchStatement = 19
    RULE_switchCase = 20
    RULE_defaultCase = 21
    RULE_functionDeclaration = 22
    RULE_parameters = 23
    RULE_parameter = 24
    RULE_classDeclaration = 25
    RULE_classMember = 26
    RULE_expression = 27
    RULE_assignmentExpr = 28
    RULE_conditionalExpr = 29
    RULE_logicalOrExpr = 30
    RULE_logicalAndExpr = 31
    RULE_equalityExpr = 32
    RULE_relationalExpr = 33
    RULE_additiveExpr = 34
    RULE_multiplicativeExpr = 35
    RULE_unaryExpr = 36
    RULE_primaryExpr = 37
    RULE_literalExpr = 38
    RULE_leftHandSide = 39
    RULE_primaryAtom = 40
    RULE_suffixOp = 41
    RULE_arguments = 42
    RULE_arrayLiteral = 43
    RULE_type = 44
    RULE_baseType = 45

    ruleNames =  [ "program", "statement", "block", "variableDeclaration", 
                   "constantDeclaration", "typeAnnotation", "initializer", 
                   "assignment", "expressionStatement", "printStatement", 
                   "ifStatement", "whileStatement", "doWhileStatement", 
                   "forStatement", "foreachStatement", "breakStatement", 
                   "continueStatement", "returnStatement", "tryCatchStatement", 
                   "switchStatement", "switchCase", "defaultCase", "functionDeclaration", 
                   "parameters", "parameter", "classDeclaration", "classMember", 
                   "expression", "assignmentExpr", "conditionalExpr", "logicalOrExpr", 
                   "logicalAndExpr", "equalityExpr", "relationalExpr", "additiveExpr", 
                   "multiplicativeExpr", "unaryExpr", "primaryExpr", "literalExpr", 
                   "leftHandSide", "primaryAtom", "suffixOp", "arguments", 
                   "arrayLiteral", "type", "baseType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    Literal=56
    IntegerLiteral=57
    StringLiteral=58
    Identifier=59
    WS=60
    COMMENT=61
    MULTILINE_COMMENT=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CompiscriptParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.StatementContext,i)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CompiscriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 652988962011851866) != 0):
                self.state = 92
                self.statement()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(CompiscriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.VariableDeclarationContext,0)


        def constantDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.ConstantDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(CompiscriptParser.AssignmentContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.FunctionDeclarationContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(CompiscriptParser.ClassDeclarationContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.PrintStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(CompiscriptParser.BlockContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.DoWhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ForStatementContext,0)


        def foreachStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ForeachStatementContext,0)


        def tryCatchStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.TryCatchStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.SwitchStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ContinueStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(CompiscriptParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = CompiscriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.constantDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.assignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.functionDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.classDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.expressionStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 106
                self.printStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 107
                self.block()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 108
                self.ifStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 109
                self.whileStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 110
                self.doWhileStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 111
                self.forStatement()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 112
                self.foreachStatement()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 113
                self.tryCatchStatement()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 114
                self.switchStatement()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 115
                self.breakStatement()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 116
                self.continueStatement()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 117
                self.returnStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.StatementContext,i)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = CompiscriptParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(CompiscriptParser.T__0)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 652988962011851866) != 0):
                self.state = 121
                self.statement()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(CompiscriptParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CompiscriptParser.Identifier, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(CompiscriptParser.TypeAnnotationContext,0)


        def initializer(self):
            return self.getTypedRuleContext(CompiscriptParser.InitializerContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = CompiscriptParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 130
            self.match(CompiscriptParser.Identifier)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 131
                self.typeAnnotation()


            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 134
                self.initializer()


            self.state = 137
            self.match(CompiscriptParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CompiscriptParser.Identifier, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(CompiscriptParser.TypeAnnotationContext,0)


        def initializer(self):
            return self.getTypedRuleContext(CompiscriptParser.InitializerContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_constantDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantDeclaration" ):
                listener.enterConstantDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantDeclaration" ):
                listener.exitConstantDeclaration(self)




    def constantDeclaration(self):

        localctx = CompiscriptParser.ConstantDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constantDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(CompiscriptParser.T__5)
            self.state = 140
            self.match(CompiscriptParser.Identifier)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 141
                self.typeAnnotation()


            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 144
                self.initializer()


            self.state = 147
            self.match(CompiscriptParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeAnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CompiscriptParser.TypeContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_typeAnnotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeAnnotation" ):
                listener.enterTypeAnnotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeAnnotation" ):
                listener.exitTypeAnnotation(self)




    def typeAnnotation(self):

        localctx = CompiscriptParser.TypeAnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeAnnotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(CompiscriptParser.T__6)
            self.state = 150
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_initializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitializer" ):
                listener.enterInitializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitializer" ):
                listener.exitInitializer(self)




    def initializer(self):

        localctx = CompiscriptParser.InitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_initializer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(CompiscriptParser.T__7)
            self.state = 153
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CompiscriptParser.Identifier, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,i)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = CompiscriptParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(CompiscriptParser.Identifier)
                self.state = 156
                self.match(CompiscriptParser.T__7)
                self.state = 157
                self.expression()
                self.state = 158
                self.match(CompiscriptParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.expression()
                self.state = 161
                self.match(CompiscriptParser.T__8)
                self.state = 162
                self.match(CompiscriptParser.Identifier)
                self.state = 163
                self.match(CompiscriptParser.T__7)
                self.state = 164
                self.expression()
                self.state = 165
                self.match(CompiscriptParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)




    def expressionStatement(self):

        localctx = CompiscriptParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.expression()
            self.state = 170
            self.match(CompiscriptParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)




    def printStatement(self):

        localctx = CompiscriptParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(CompiscriptParser.T__9)
            self.state = 173
            self.match(CompiscriptParser.T__10)
            self.state = 174
            self.expression()
            self.state = 175
            self.match(CompiscriptParser.T__11)
            self.state = 176
            self.match(CompiscriptParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiscriptParser.BlockContext)
            else:
                return self.getTypedRuleContext(CompiscriptParser.BlockContext,i)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = CompiscriptParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(CompiscriptParser.T__12)
            self.state = 179
            self.match(CompiscriptParser.T__10)
            self.state = 180
            self.expression()
            self.state = 181
            self.match(CompiscriptParser.T__11)
            self.state = 182
            self.block()
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 183
                self.match(CompiscriptParser.T__13)
                self.state = 184
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(CompiscriptParser.BlockContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = CompiscriptParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(CompiscriptParser.T__14)
            self.state = 188
            self.match(CompiscriptParser.T__10)
            self.state = 189
            self.expression()
            self.state = 190
            self.match(CompiscriptParser.T__11)
            self.state = 191
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(CompiscriptParser.BlockContext,0)


        def expression(self):
            return self.getTypedRuleContext(CompiscriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CompiscriptParser.RULE_doWhileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStatement" ):
                listener.enterDoWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStatement" ):
                listener.exitDoWhileStatement(self)




    def doWhileStatement(self):
